dropshot/tests/fail/README.adoc
:showtitle:
:toc: left
:icons: font

= Trybuild fail tests

This directory contains a number of test fixtures run via https://docs.rs/trybuild[trybuild]. All of these tests are expected to produce compile-time failures. The goal of these tests is to ensure that we produce reasonable error messages--or at least that we turn good error messages into bad ones.

Each test fixture should test one endpoint. While it's possible to stuff several endpoints into a single test fixture, it becomes hard to read the errors and ensure that all the right ones are being generated.

== Numbered tests

There are several tests here of the general form:

- `bad_endpointN.rs`
- `bad_channelN.rs`

The specific situations being tested are mirrored across tests with the same N. For example, `bad_endpoint1.rs` and `bad_channel1.rs` test the situation where a `RequestContext` hasn't been provided.

Some of these tests may be moot for one of the variants. We do not renumber tests--instead, we skip that number so the fixtures afterwards stay consistent, and check in text files with the rationale for skipping. (For example, `bad_channel7.txt`.)
